--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HW05</string>
+    <string name="tv_title" />
+    <string name="tv_author" />
+    <string name="tv_newsDate" />
 </resources>
